style: modified the positions for newly added cards

--- a/exer7/static_files/index.html
+++ b/exer7/static_files/index.html
@@ -1,3 +1,8 @@
+<!-- Ruth Djusthine E. Tenifrancia -->
+<!-- UV-3L -->
+
+<!-- The html file for the Food Cards website -->
+
 <html>
     <head>
         <title>Food Cards</title>
@@ -5,7 +10,7 @@
     <body>
         <div class="container">
             <form>
-
+                <!-- form for the food cards -->
                 <label for="fname">Food name:</label><br>
                 <input class="inputbx" type="text" id="fname" name="fname"><br>
                 <label for="desc">Description:</label><br>
@@ -19,6 +24,7 @@
                 </form>
         </div>
 
+        <!-- empty section for food cards -->
         <ul id="food-card" style="list-style-type:none;">
 
         </ul>
